--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,6 +5,8 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "strict": true
   },
   "include": ["vite.config.ts"]
